--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,17 +52,23 @@
     "dentro",
     "desenvolvimento",
     "determinarão",
+    "Digite",
+    "divform",
     "Divs",
     "Documentação",
     "dotall",
     "duração",
     "eficiência",
     "empresas",
+    "Enviando",
+    "enviar",
+    "Enviar",
     "Envie",
     "espree",
     "esta",
     "estado",
     "estão",
+    "estarei",
     "Estaremos",
     "estree",
     "esutils",
