--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     "acôrdo",
     "Actacion",
     "adequado",
+    "altuta",
     "Análises",
     "anymatch",
     "apenas",
@@ -29,6 +30,7 @@
     "bancos",
     "bcoe",
     "Bibliotecas",
+    "Borda",
     "botão",
     "browserslist",
     "Buttom",
@@ -84,6 +86,7 @@
     "evoluem",
     "Exemplos",
     "exercício",
+    "existir",
     "fastq",
     "ferramentas",
     "fidelidade",
@@ -103,6 +106,7 @@
     "integrar",
     "istanbuljs",
     "jsesc",
+    "largura",
     "lhes",
     "logosys",
     "minifier",
@@ -128,7 +132,6 @@
     "pira",
     "Plataforma",
     "pluginutils",
-    "pmmmwh",
     "presenciais",
     "Prevenção",
     "princípios",
@@ -137,6 +140,7 @@
     "programáveis",
     "próprios",
     "publicar",
+    "quanto",
     "redent",
     "Referência",
     "regexpu",
