--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -22,12 +22,16 @@
     "adotamos",
     "adquirido",
     "ajuda",
+    "alguns",
     "altuta",
     "ambiêntes",
     "Análises",
     "anymatch",
     "apenas",
     "Após",
+    "Apresentamos",
+    "apresentando",
+    "apresentar",
     "apto",
     "aqui",
     "arity",
@@ -65,13 +69,16 @@
     "cnakazawa",
     "código",
     "Código",
+    "colaboração",
     "comerciais",
+    "comercial",
     "compat",
     "completa",
     "conceito",
     "concentimento",
     "conforme",
     "Conheça",
+    "contamos",
     "contar",
     "Contato",
     "CONTATOS",
@@ -89,9 +96,13 @@
     "debilitar",
     "deepmerge",
     "delegados",
+    "delegamos",
     "demais",
     "denota",
+    "Dentre",
     "dentro",
+    "desejada",
+    "desejado",
     "desenvolvimento",
     "destes",
     "determinado",
@@ -101,7 +112,9 @@
     "diferêntes",
     "Digite",
     "direta",
+    "disponibilizamos",
     "disponiveis",
+    "diversos",
     "divform",
     "Divisiontext",
     "Divs",
@@ -111,10 +124,12 @@
     "dotall",
     "duração",
     "efetuado",
+    "efetuados",
     "eficiência",
     "elaboração",
     "elaborado",
     "eleborado",
+    "eles",
     "emetida",
     "emissão",
     "Empresa",
@@ -158,6 +173,7 @@
     "filtros",
     "físicos",
     "fornecer",
+    "fornecerem",
     "fornecidas",
     "fraudes",
     "gensync",
@@ -165,6 +181,7 @@
     "gerenciamento",
     "gerenciar",
     "Gerencie",
+    "grandes",
     "Gravação",
     "Gravações",
     "guardado",
@@ -184,6 +201,7 @@
     "inicia",
     "integrado",
     "integrar",
+    "interesse",
     "interna",
     "isso",
     "istanbuljs",
@@ -192,13 +210,16 @@
     "largura",
     "lhes",
     "liberdade",
+    "limitados",
     "Logar",
     "logosys",
     "maiores",
     "mais",
     "manufatura",
     "manufaturas",
+    "materiais",
     "matrizfilial",
+    "médios",
     "melhor",
     "melhorar",
     "mesma",
@@ -226,15 +247,19 @@
     "operar",
     "optiopns",
     "ordem",
+    "padrão",
     "padrões",
     "pagamentos",
     "Pagamentos",
     "pagedoccompany",
     "pagedocempresa",
     "pagedocservico",
+    "participes",
     "pelo",
+    "pequenos",
     "perfil",
     "perpective",
+    "perspequitivas",
     "perssonaficação",
     "pesquisadas",
     "pessoais",
@@ -252,6 +277,12 @@
     "Podutos",
     "porta",
     "Portfólio",
+    "portfolioprodutos",
+    "Portfólios",
+    "portfolioservicos",
+    "portpfprodutos",
+    "portpfservicos",
+    "possa",
     "possibilidade",
     "possível",
     "prática",
@@ -270,6 +301,7 @@
     "próprio",
     "próprios",
     "publicar",
+    "qualidade",
     "quanto",
     "ramo",
     "receber",
@@ -339,6 +371,7 @@
     "Versão",
     "Vindo",
     "virtuais",
+    "visualizar",
     "watszap",
     "Whatsz",
     "yargs"
