--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -53,6 +53,7 @@
     "Bordados",
     "botão",
     "browserslist",
+    "btdesig",
     "Buttom",
     "Cabeçalho",
     "cada",
@@ -98,6 +99,7 @@
     "Criação",
     "csstools",
     "debilitar",
+    "Dedigns",
     "deepmerge",
     "delegados",
     "delegamos",
@@ -110,6 +112,8 @@
     "desejado",
     "desenvolvimento",
     "desfrutar",
+    "Desig",
+    "designbrc",
     "destes",
     "determinado",
     "determinarão",
@@ -120,15 +124,20 @@
     "direta",
     "disponibilizamos",
     "disponiveis",
+    "divborda",
+    "divdesig",
     "diversas",
     "diversos",
     "divform",
     "Divisiontext",
+    "divlaser",
+    "divnm",
     "Divs",
     "doccompany",
     "docempresa",
     "Documentação",
     "dotall",
+    "Dropdowmenu",
     "duração",
     "efetuado",
     "efetuados",
@@ -220,6 +229,8 @@
     "lhes",
     "liberdade",
     "limitados",
+    "Limpar",
+    "limparbrc",
     "Logar",
     "logod",
     "logosys",
@@ -232,6 +243,7 @@
     "médios",
     "melhor",
     "melhorar",
+    "menubrc",
     "mesma",
     "mesmo",
     "minifier",
@@ -262,6 +274,7 @@
     "padrões",
     "pagamentos",
     "Pagamentos",
+    "pagedesignprod",
     "pagedoccompany",
     "pagedocempresa",
     "pagedocservico",
@@ -291,6 +304,7 @@
     "portfolioprodutos",
     "Portfólios",
     "portfolioservicos",
+    "Portifolio",
     "Portifólios",
     "portpfprodutos",
     "portpfservicos",
@@ -309,6 +323,7 @@
     "processamento",
     "processo",
     "Produtos",
+    "produtoslogo",
     "programáveis",
     "próprio",
     "próprios",
@@ -325,6 +340,8 @@
     "requerer",
     "respectivo",
     "restrita",
+    "retornar",
+    "Retornar",
     "rimraf",
     "Rodapé",
     "rollup",
