renomeado os arquivos casa

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
   },
   "cSpell.words": [
     "aberto",
+    "Abrir",
     "Aceite",
     "Acesso",
     "acima",
@@ -50,10 +51,12 @@
     "bcoe",
     "Bibliotecas",
     "Borda",
+    "Bordado",
     "Bordados",
     "botão",
     "browserslist",
     "btdesig",
+    "btlaser",
     "Buttom",
     "Cabeçalho",
     "cada",
@@ -132,6 +135,7 @@
     "Divisiontext",
     "divlaser",
     "divnm",
+    "divprd",
     "Divs",
     "doccompany",
     "docempresa",
@@ -274,10 +278,12 @@
     "padrões",
     "pagamentos",
     "Pagamentos",
+    "pagebordadoprod",
     "pagedesignprod",
     "pagedoccompany",
     "pagedocempresa",
     "pagedocservico",
+    "pagelaserprod",
     "participes",
     "pelo",
     "pequenos",
